# AutoHeckinTextureConverter

./: .gitignore  Auto Heckin' Texture Converter.bat  CMakeLists.txt  Cargo.toml  DE_Textures_ReadMe.txt  LICENSE  README.md  build.rs  main.cpp  utils.cpp  utils.hpp
.github/workflows/: build.yml  test.yml
lib/: bc7e.lib  oodle.h  oodle_bindings.rs
src/: bc7e.rs  bc7e_bindings.rs  bim.rs  main.rs  ooz.rs  ooz_bindings.rs  test.rs  utilities.rs  utils.rs
tools/: license.txt  nvcompress_license.txt
tools/linux/: DivinityMachine  nvdecompress
