[package]
name = "auto_heckin_texture_converter"
version = "5.1.0"
edition = "2021"

[dependencies]
texpresso = "2.0.1"
image = "0.24.2"
ispc = "1.1.0"

[build-dependencies]
ispc = "1.1.0"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.42.0", features = ["Win32_System_Console"] }

[profile.release]
strip = true
codegen-units = 1
lto = true
