[package]
name = "auto_heckin_texture_converter"
version = "5.4.0"
edition = "2021"

[dependencies]
texpresso = { version = "2.0.1", features = ["rayon"] }
image = { version = "0.24.5", default-features = false, features = ["png"] }
fast_image_resize = "2.5.0"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.45.0", features = ["Win32_System_Console"] }

[profile.release]
panic = "abort"
strip = true
codegen-units = 1
lto = true
