[package]
name = "auto_heckin_texture_converter"
version = "5.5.1"
edition = "2021"

[dependencies]
# texpresso = { version = "2.0.1", features = ["rayon"] }
texpresso = { git = "https://github.com/chieltbest/texpresso.git", features = ["rayon"] }
image = { version = "0.25.2", default-features = false, features = ["png"] }
fast_image_resize = "4.2.1"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.52.0", features = ["Win32_System_Console"] }

[profile.release]
panic = "abort"
strip = true
codegen-units = 1
lto = true
